# solana_test_tasks

./: Cargo.toml  config1.yaml  config2.yaml  config3.yaml
