[package]
name = "solana_tz_2"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
reqwest = { version = "0.12.11", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9.34"
solana-client = "2.1.7"
solana-sdk = "2.1.7"
tokio = { version = "1.42.0", features = ["full"] }

[[bin]]
name = "task2"
